did some CP questions